--- a/src/main/resources/templates/user/allRecipes.html
+++ b/src/main/resources/templates/user/allRecipes.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <title>All recipes</title>
     <link href="../../static/css/allRecipes.css" rel="stylesheet" th:href="@{css/allRecipes.css}" type="text/css">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" rel="stylesheet">
     <link href="../../static/css/headerIfooter.css" rel="stylesheet" th:href="@{../css/headerIfooter.css}"
           type="text/css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" rel="stylesheet">
     <script charset="UTF-8" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 </head>
 <body>
@@ -57,7 +57,7 @@
 
                     <img alt="user" class="user" id="user-img2"
                          src="../../images/user-login.svg"
-                         th:src="@{../images/user-login.svg}">
+                         th:src="@{images/user-login.svg}">
                 </div>
             </button>
         </a>
@@ -104,11 +104,11 @@
                     <label class="dish" for="main-dish">Main dishes</label>
                 </div>
                 <div class="dish-container">
-                    <input id="desserts" name="dish" type="checkbox" value="Desserts">
+                    <input id="desserts" name="dish" type="checkbox" value="Dessert">
                     <label class="dish" for="desserts">Desserts</label>
                 </div>
                 <div class="dish-container">
-                    <input id="salads" name="dish" type="checkbox" value="Salads">
+                    <input id="salads" name="dish" type="checkbox" value="Salad">
                     <label class="dish" for="salads">Salads</label>
                 </div>
                 <div class="dish-container">
@@ -116,19 +116,19 @@
                     <label class="dish" for="pastry">Pastry</label>
                 </div>
                 <div class="dish-container">
-                    <input id="drinks" name="dish" type="checkbox" value="Drinks">
+                    <input id="drinks" name="dish" type="checkbox" value="Drink">
                     <label class="dish" for="drinks">Drinks</label>
                 </div>
                 <div class="dish-container">
-                    <input id="snacks" name="dish" type="checkbox" value="Snacks">
+                    <input id="snacks" name="dish" type="checkbox" value="Snack">
                     <label class="dish" for="snacks">Snacks</label>
                 </div>
                 <div class="dish-container">
-                    <input id="fish-dishes" name="dish" type="checkbox" value="Fish Dishes">
+                    <input id="fish-dishes" name="dish" type="checkbox" value="Fish Dish">
                     <label class="dish" for="fish-dishes">Fish dishes</label>
                 </div>
                 <div class="dish-container">
-                    <input id="sauces" name="dish" type="checkbox" value="Sauces">
+                    <input id="sauces" name="dish" type="checkbox" value="Sauce">
                     <label class="dish" for="sauces">Sauces</label>
                 </div>
             </div>
