--- a/src/main/resources/static/css/moderatorPage.css
+++ b/src/main/resources/static/css/moderatorPage.css
@@ -14,6 +14,7 @@ body {
     padding-right: 2.083vw;
     padding-left: 4.166vw;
 }
+
 .logo1 {
     width: 6.25vw;
     height: 10vh;
@@ -44,7 +45,7 @@ body {
     outline: none;
 }
 
-.magnifier{
+.magnifier {
     height: 3.3333333333vh;
     width: 1.875vw;
 }
@@ -81,38 +82,40 @@ body {
     width: 4.6vw;
     height: 9.2593vh;
 }
-.home{
+
+.home {
     height: 5.55555555vh;
     width: 3.125vw;
 }
+
 /*____________________________________________________________________________________________________________________*/
-.avatarField{
+.avatarField {
     position: absolute;
     width: 12vw;
-    height:23.15vh;
+    height: 23.15vh;
     left: 2.448vw;
     top: 15.9vh;
     border-radius: 50%;
     background-color: #F2E3B3;
 }
 
-.moder{
+.moder {
     width: 7.4vw;
     height: 14.85vh;
     margin-top: 3vh;
     margin-left: 2.35vw;
 }
 
-.line{
+.line {
     width: 23.8vw; /* Ширина лінії */
     height: 1.2vh; /* Товщина лінії */
-    background-color:#3E5902; /* Колір лінії */
+    background-color: #3E5902; /* Колір лінії */
     border-radius: 5vh;
     margin-left: 16vw;
     margin-top: 21vh;
 }
 
-.nikText{
+.nikText {
     position: absolute;
     font-family: 'Frank Ruhl Libre', serif;
     font-size: 2.7vh;
@@ -124,17 +127,18 @@ body {
     left: 19.2vw;
     top: 29.8vh;
 }
+
 /*____________________________________________________________________________________________________________________*/
-.AIReport{
+.AIReport {
     width: 32.3vw;
     height: 18.52vh;
-    background-color:#F2E3B3;
+    background-color: #F2E3B3;
     border-radius: 5vh;
     margin-left: 16.875vw;
     margin-top: 10.65vh;
 }
 
-.reportAI{
+.reportAI {
     position: absolute;
     font-family: 'Frank Ruhl Libre', serif;
     font-size: 2.7vh;
@@ -147,16 +151,16 @@ body {
     top: 47vh;
 }
 
-.UserReport{
+.UserReport {
     width: 32.3vw;
     height: 18.52vh;
-    background-color:#F2E3B3;
+    background-color: #F2E3B3;
     border-radius: 5vh;
     margin-left: 51.5vw;
     margin-top: -18.52vh;
 }
 
-.reportUser{
+.reportUser {
     position: absolute;
     font-family: 'Frank Ruhl Libre', serif;
     font-size: 2.7vh;
@@ -169,20 +173,21 @@ body {
     top: 47vh;
 }
 
-.returnB{
+.returnB {
     width: 28.3vw;
     height: 8.34vh;
-    background-color:#3E5902;
+    background-color: #3E5902;
     border-radius: 5vh;
     margin-left: 59.4vw;
     margin-top: 18vh;
     text-align: center;
-    font-family: 'Frank Ruhl Libre' , serif;
+    font-family: 'Frank Ruhl Libre', serif;
     font-size: 2.2vh;
     font-size: 2.2vw;
     color: #FBEFC7;
     border: none;
     padding-top: 2.5vh;
+    text-decoration: none;
 }
 
 .returnB:hover, .returnText:hover {
@@ -190,6 +195,7 @@ body {
     color: #3E5902;
     border: 0.5vh solid #3E5902;
 }
+
 /*____________________________________________________________________________________________________________________*/
 
 /*а чи потрібно нам таку довгу фразу? може просто скоротити її до Log out ?*/
@@ -202,7 +208,6 @@ body {
 /*    margin-top: -6.1vh;*/
 /*    margin-left: 91.66vw;*/
 /*}*/
-
 
 
 /*____________________________________________________________________________________________________________________*/
@@ -350,7 +355,7 @@ body {
     height: 4.2592vh;
 }
 
-.instagram{
+.instagram {
     width: 2.3vw;
     height: 4.06vh;
 }
@@ -358,6 +363,7 @@ body {
 .telegram-container:hover, .instagram-container:hover {
     background-color: #733506;
 }
+
 .copyright {
     position: static;
     width: 21vw;
