--- a/src/main/resources/static/css/user.css
+++ b/src/main/resources/static/css/user.css
@@ -72,6 +72,11 @@
 .createRecipe {
     top: 34.1vh;
     background-color: #F28705;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+    color: black;
 }
 
 .confirm-list-button {
@@ -79,11 +84,17 @@
     top: 11vh;
     left: 0.6vh;
     background-color: #F28705;
+
 }
 
 .allLists {
     top: 34.2vh;
     background-color: #F28705;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+    color: black;
 }
 
 .logOut {
@@ -94,6 +105,12 @@
 .logInModerator {
     background: rgba(242, 183, 5, 0.3);
     top: 34.4vh;
+    border: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+    color: black;
 }
 
 .confirm-list-button:hover {
