--- a/src/main/resources/templates/user/main.html
+++ b/src/main/resources/templates/user/main.html
@@ -61,6 +61,7 @@
         </a>
         <div id="overlay-user" onclick="hideOverlay()"></div>
         <div class="login-window" id="popup-login-window">
+            <!--            <button class="login-heading loginStyles">Log in</button>-->
             <h1 class="login-heading">Log in</h1>
             <form autocomplete="off" id="loginForm" method="post" onsubmit="return submitForm()"
                   th:action="@{api/auth/login}">
