--- a/src/main/resources/templates/user/user.html
+++ b/src/main/resources/templates/user/user.html
@@ -78,12 +78,16 @@
 
     <div class="button-container" id="button">
         <button class="createList" id="createList-btn">Create a list</button>
-        <button class="createRecipe">Create a recipe</button>
-        <button class="allLists">All Lists</button>
+        <a class="createRecipe" href="recipeCreation.html" th:href="@{/newRecipe}">Create a recipe</a>
+        <a class="allLists" href="allLists.html" th:href="@{/allLists}">All Lists</a>
         <form method="post" th:action="@{/api/logout}">
             <button class="userButton logOut">Log out</button>
         </form>
-        <button class="userButton logInModerator">Log in as moderator</button>
+        <a class="userButton logInModerator" href="../moderator/moderatorAIReports.html"
+           th:href="@{/moderatorAIReports}">Log
+            in
+            as
+            moderator</a>
     </div>
 
     <div id="overlay-list" onclick="hideOverlay()"></div>
