made some changes

--- a/src/main/resources/templates/user/recipeCreation.html
+++ b/src/main/resources/templates/user/recipeCreation.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Recipe Creation</title>
-    <link rel="stylesheet" type="text/css" href="../../static/css/recipeCreation.css" >
+    <link rel="stylesheet" type="text/css" href="../../static/css/recipeCreation.css"  th:href="@{css/recipeCreation.css}" >
 </head>
 <header>
     <div class="header">
