--- a/src/main/resources/templates/user/recipe.html
+++ b/src/main/resources/templates/user/recipe.html
@@ -263,12 +263,20 @@
                 <label class="fa fa-star" for="10"></label>
             </div>
         </div>
-        <form method="post" th:action="@{/api/newRating/{id1}(id1=${id})}" th:object="${rating}">
-            <input id="hidden-rating" name="mark" th:value="${rating.mark}" type="hidden"/>
-            <button class="confirmation" id="rate-btn">
+        <div th:if="${isLogin} == true">
+            <form method="post" th:action="@{/api/newRating/{id1}(id1=${id})}" th:object="${rating}">
+                <input id="hidden-rating" name="mark" th:value="${rating.mark}" type="hidden"/>
+                <button class="confirmation" id="rate-btn">
+                    <img alt="quill" class="tick" src="../../images/tick.svg" th:src="@{../images/tick.svg}">
+                </button>
+            </form>
+        </div>
+        <div th:if="${isLogin} == false">
+            <input id="hidden-rating2" name="mark" th:value="${rating.mark}" type="hidden"/>
+            <button class="confirmation" id="rate-btn2" onclick="showAlert('Please, log in to rate')">
                 <img alt="quill" class="tick" src="../../images/tick.svg" th:src="@{../images/tick.svg}">
             </button>
-        </form>
+        </div>
     </div>
 </main>
 <footer class="footer">
@@ -304,8 +312,6 @@
         </div>
     </div>
 </footer>
-<!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.4.8/dist/sweetalert2.all.min.js"></script>-->
 <script src="../../js/scripts.js" th:href="@{js/scripts.js}"></script>
 <script>
     function getRating() {
@@ -334,11 +340,6 @@
         alert(message);
     }
 
-    /*$(".Report").click(function(){
-        Swal.fire('Register to report',);
-    });*/
-
-
     function submitForm() {
         var form = document.getElementById('loginForm');
         var id = [[${id}]];
@@ -360,7 +361,7 @@
             }
         };
         xhr.send(JSON.stringify(data));
-        return false; // Prevent the form from submitting in the traditional way
+        return false;
     }
 
     document.getElementById("report-btn").addEventListener("click",
