--- a/src/main/resources/templates/moderator/moderatorPage.html
+++ b/src/main/resources/templates/moderator/moderatorPage.html
@@ -10,9 +10,7 @@
 <body>
 <header>
     <div class="header">
-        <img alt="logo1" class="logo1" src="../../static/images/logo1.svg" th:src="@{images/logo1.svg}">
-
-
+        <img alt="logo" class="logo" src="../../images/logo.svg" th:src="@{../images/logo.svg}">
         <form class="search-form">
             <img alt="magnifier" class="magnifier" src="../../static/images/magnifier.svg"
                  th:src="@{images/magnifier.svg}">
@@ -47,7 +45,7 @@
 
 <main>
     <div class="avatarField">
-        <img alt="moder" class="moder" src="../../images/Moderator.svg" th:src="@{images/Chef.svg}">
+        <img alt="moder" class="moder" src="../../images/Moderator.svg" th:src="@{../images/Moderator.svg}">
     </div>
     <div class="line">
         <div class="nikText">Moderator name</div>
@@ -56,9 +54,10 @@
         <a class="reportAI" href="../moderator/moderatorPage.html" th:href="@{/moderator/AIReports}">Recipe publishing
             (AI)</a>
     </div>
+    <!--TODO: Треба і тут і в сторінці юзера придумати як зробити кнопку поля також інтерактивною для посилання-->
 
     <div class="UserReport">
-        <p class="reportUser">User report</p>
+        <a class="reportUser" href="../moderator/moderatorPage.html" th:href="@{/moderator/UserReports}">User report</a>
     </div>
     <a class="returnB" href="../user/user.html" th:href="@{/user}">Return to the user account
     </a>
