--- a/src/main/resources/static/css/allLists.css
+++ b/src/main/resources/static/css/allLists.css
@@ -79,14 +79,14 @@
     top: 9vh;
     width: 27.6vw;
     height: 30vh;
-    /*background-color: #B90F0F; !*червоний для зручності щоб бачити межі контейнеру*!*/
     left: 0.7vw; /*2.605vw; - це щоб було рівномірно, але в нас там ще буде скрол, томку поки так*/
     overflow-y: auto;
     overflow-x: hidden;
 }
 
 .userRecipeField {
-    position: absolute;
+    display: flex;
+    justify-content: space-between;
     width: 27.6vw;
     height: 8vh;
     background-color: #FBEFC7;
@@ -99,15 +99,15 @@
     font-family: 'Frank Ruhl Libre', serif;
     font-size: 1.3vw;
     top: 1vh;
-    left: 2vw;
+    left: 3vw;
 }
 
 .testForSwitch2 {
-    position: absolute;
+    flex: 1;
+    padding-top: 4vh;
+    padding-left: 3vw;
     font-family: 'Frank Ruhl Libre', serif;
     font-size: 1.3vw;
-    top: 5vh;
-    left: 2vw;
 }
 
 .publishBlocked {
