--- a/src/main/resources/static/css/headerIfooter.css
+++ b/src/main/resources/static/css/headerIfooter.css
@@ -349,6 +349,7 @@ body {
     border-radius: 2.7vw;
     background-color: #F2E3B3;
     z-index: 11;
+    overflow-y: auto;
 }
 
 .recipe {
@@ -356,7 +357,7 @@ body {
     top: 2vh;
     left: 2vw;
     width: 21vw;
-    height: 6.48vh;
+    height: 8vh;
     border-radius: 2.7vw;
     border: 0.5vh solid #B90F0F;
     background-color: #FBEFC7;
@@ -367,7 +368,7 @@ body {
 .content-wrapper {
     display: flex;
     align-items: center;
-    margin-right: 2vw;
+    margin-right: 1vw;
 }
 
 .text-wrapper {
