--- a/src/main/resources/templates/user/user.html
+++ b/src/main/resources/templates/user/user.html
@@ -30,27 +30,29 @@
             </div>
         </div>
 
-        <!--<div id="overlay-favorite" onclick="hideOverlay()"></div>
+        <div id="overlay-favorite" onclick="hideOverlay()"></div>
         <div class="favoriteLists-window" id="favorite-popup-window">
             <div th:if="${favoriteList != null}">
-                <div th:each="recipe, i : ${favoriteList}">
-                    <button th:class="${i.index == 0} ? 'recipe' : 'recipe' + i.index">
+                <div th:each="recipe, i : ${favoriteList.getRecipeUserLists()}">
+                    <button th:class="${i.index == 0} ? 'recipe recipe' : 'recipe recipe' + i.index"
+                            th:style="'top:' + (${i.index * 10 + 2}) + 'vh'">
                         <div class="content-wrapper">
                             <div class="comment-user-circle">
-                                <img th:alt="${recipe.getCategory().getTitle()}"
-                                     th:class="${recipe.getCategory().getTitle().replace(' ', '-')}"
+                                <img th:alt="${recipe.getRecipe().getCategory().getTitle()}"
                                      th:if="${recipe}"
-                                     th:src="@{'../images/' + ${recipe.getCategory().getTitle()} + '.svg'}">
+                                     th:src="@{'../images/' + ${recipe.getRecipe().getCategory().getTitle()} + '.svg'}">
                             </div>
                             <div class="text-wrapper">
-                                <a style="font-weight: bold;" th:text="${recipe.getTitle()}"></a>
+                                <a style="font-weight: bold;"
+                                   th:href="@{/recipe/{id}(id=${recipe.getRecipe().getId()})}"
+                                   th:text="${recipe.getRecipe().getTitle()}"></a>
                             </div>
                         </div>
                     </button>
                 </div>
             </div>
-        </div>-->
-        
+        </div>
+
         <button class="user-container" id="user-btn">
             <div class="user"
                  onmouseout="restoreImage('user-img', '../../images/user-login.svg')"
@@ -189,11 +191,6 @@
         () => hideOverlay("overlay-list", "list-field-popup-window"));
     document.getElementById("confirm-list-btn").addEventListener("click",
         () => hideOverlay("overlay-list", "list-field-popup-window"));
-
-    document.getElementById("heart-btn").addEventListener("click",
-        () => showOverlay("overlay-favorite", "favorite-popup-window"));
-    document.getElementById("overlay-favorite").addEventListener("click",
-        () => hideOverlay("overlay-favorite", "favorite-popup-window"));
 </script>
 </body>
 </html>
